feat: update the project

--- a/frmCadastroCliente.resx
+++ b/frmCadastroCliente.resx
@@ -117,13 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label3.Text" xml:space="preserve">
-    <value>Bem-vindo à Livraria, seu destino aconchegante para amantes de livros! 
-Nós oferecemos uma curadoria cuidadosamente seleção de gêneros, desde clássicos atemporais até últimos best-sellers.
-Junte-se a nós para eventos e recomendações enquanto celebramos a alegria de lendo juntos. 
-Boa leitura!</value>
-  </data>
-  <metadata name="mspMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>30</value>
   </metadata>
 </root>
