--- a/frmPaginaInicial.resx
+++ b/frmPaginaInicial.resx
@@ -117,21 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="label3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="label2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="label3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="label2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Bem-vindo à "BookHouse"! :)
+
+Aqui, você encontrará um ambiente acolhedor e inspirador, ideal para mergulhar nas páginas de um bom livro.
+
+Nosso acervo conta com uma seleção cuidadosa dos melhores títulos do mercado, abrangendo uma ampla variedade de categorias. De clássicos atemporais a lançamentos imperdíveis, nossa curadoria é pensada para atender a todos os gostos e interesses literários. Seja você é 
+um amante de ficção, biografias, romances, ou até mesmo de obras mais contemporâneas, temos algo especial para oferecer.
+
+Na "BookHouse", a leitura é uma experiência única, e nosso compromisso é proporcionar momentos de prazer e conhecimento. Junte-se a nós, compartilhe a paixão pelos livros e celebre a magia das histórias que nos transformam!</value>
+  </data>
   <metadata name="mspMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
